src/objects/Supporter__c.object
<CustomObject>
    <description>This is a new Custom object created for the HAS Form Implementation. It&apos;s purpose is to hold details of supports who are supporting an application. It will be a child object in a master detail relationship with the Case object.</description>
    <fields>
        <fullName>Knew_From_Knew_Until__c</fullName>
        <description>Shows the date span Knew From to Knew Until for surfacing in the Visual Force supporters table.</description>
        <formula>Knew_From__c &amp; &quot; to &quot; &amp; Knew_Until__c</formula>
        <label>Knew From to Knew Until</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knew_From__c</fullName>
        <description>This is a new field for the HAS Form implementation. It is used to store a date indicating when the support first met the Nominee</description>
        <label>Knew From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knew_Until__c</fullName>
        <description>This is a new field for the HAS Form implementation. It is used to store a date indicating when the supporter ceased to know the Nominee</description>
        <label>Knew Until</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Submitted__c</fullName>
        <description>This is a field for the HAS Form. It will be used to indicate if the supporter has uploaded a letter of support as an attachment or whether they plan to at a later date</description>
        <label>Letter Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I&apos;ll Submit Later</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nomination_Id__c</fullName>
        <description>This field is a master detail lookup to the case object. It represents the relationship where a supporter record belongs to a Nomination</description>
        <label>Nomination Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Supporters</relationshipLabel>
        <relationshipName>Supporters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>This is a new field created for the HAS Form. It will be used to store the relationship of the supporter to the Nominee</description>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Supporter</label>
    <nameField>
        <label>Supporter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supporters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>